2006-09-04  Mats Cronqvist  <locmacr@mwlx084>

	* src/distel.erl (Module): reload_module/2; 1st arg assumed to be
	sting, could be atom or string.  resolved by creating to_atom/1
	and to_bin/1. got rid of l2a/1 and l2b/1.

2006-08-03  Mats Cronqvist  <locmacr@mwlx084>

	* src/distel.erl (Module): had problems in guess_source_file/2;
	1st arg was assumed to be atom, but could be atom or list.
	wound up creating 3 functions;
	
	l2a/1 - list_to_atom
	l2b/1 - list_to_binary
	to_list - *_to_list

	and use them consistently.
	
2006-05-15  Mats Cronqvist  <locmacr@mwlx084>

	* src/distel.erl (Module): behaviour of int:meta changed in R10B-10.
	edb now understands the new, and (hopefully) the old as well.

	new feature; you can attach to a process that exited in
	interpreted code and inspect the stack (just as if you're in a
	break)

	fixed bug when trying to do c:l/1 on a string
	
2005-06-07  Mats Cronqvist  <locmacr@mwlx084>

	* elisp/derl.el (derl-cookie): made derl-cookie writable

2005-06-03  Mats Cronqvist  <locmacr@mwlx084>

	* elisp/erl-service.el (erl-openparent): inserts a "(" and the
	argument list from erl-openparen.
	
	(erl-reload-dwim): Do What I Mean to erl-reload-module. when
	reloading beam files; if erl-reload-dwim is non-nil, and the
	erlang module cannot be found in the load path, we attempt to find
	the correct directory. I.e. if we're editing PATH/Mod.erl we look
	for PATH/Mod.beam orelse PATH/../ebin/Mod.beam. if found we add
	the dir to the load path and retry the load.  We also don't prompt
	for the module name. this is your basic bloat.

	* elisp/distel.el (Module): bound M-( to erl-openparent

2005-06-02  Mats Cronqvist  <locmacr@mwlx084>

	* src/distel.erl (reload_module/2): runs c:l/1, if it fails it looks
	for the beam file in in srcdir and srcdir/../ebin (srcdir is where
	the .erl file that you're editing lives, it's sent from emacs). if
	it finds the beam file it adds the appropriate dir to the load
	path and reruns c:l/1.